test/scc/decl/semantic-errors/013.a
013.t:4:5: error: redefinition of 'a'